--- a/css/styles.css
+++ b/css/styles.css
@@ -30,8 +30,8 @@ body {
 	position:relative;
 }
 ul, li {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: .8em;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: .8em;
 	color: #333;
 }
 a {
@@ -57,7 +57,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   min-height: 100%;
 }
 #footer {
-  background-color: #444;
+  background-color: #363636;
   color: #aaa;
   font-size: .65em;
   letter-spacing: 1px;
@@ -128,15 +128,21 @@ nav h1 a span {
 /* ====================== Map ====================== */
 /* TODO: give maps a layout fit for mobile */
 #map {
-  height: 400px;
+  /* height: 400px; */
+  height: calc(100vh - 214px);
   width: 100%;
   background-color: #ccc;
+}
+@media screen and (orientation: landscape) and (max-height: 600px) {
+  #map {
+    height: calc(100vh - 66px);
+  }
 }
 /* ====================== Restaurant Filtering ====================== */
 /* TODO: Filter results section looks awful */
 .filter-options {
   width: 100%;
-  background-color: #3397DB;
+  background-color: #0a5586;
   padding: 10px 0;
 }
 .filter-options h2 {
@@ -144,7 +150,7 @@ nav h1 a span {
   font-size: 1em;
   font-weight: normal;
   line-height: 1;
-  margin: 10px 20px;
+  margin: 7px 15px;
 }
 .filter-options select {
   background-color: white;
@@ -152,9 +158,9 @@ nav h1 a span {
   font-family: Arial,sans-serif;
   font-size: .8em;
   height: 35px;
-  margin: 10px 20px;
+  margin: 7px 15px;
   padding: 0 10px;
-  width: 200px;
+  width: calc(100% - 30px);
 }
 
 /* ====================== Restaurant Listing (index.html) +============== */
@@ -163,18 +169,16 @@ nav h1 a span {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
-  text-align: center;
+  padding: 30px 0;
+  font-size: 1em;
 }
 #restaurants-list li {
   background-color: #fff;
-  border: 2px solid #ccc;
-  font-family: Arial,sans-serif;
-  margin: 15px;
+  margin: 30px;
   min-height: 380px;
-  padding: 0 30px 25px;
-  text-align: left;
-  width: 270px;
+  padding: 0;
+  border-radius: 25px 0 25px 0;
+  box-shadow: 0 3px 9px #0000001f, 0 3px 9px #0000003d;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -183,28 +187,31 @@ nav h1 a span {
   max-width: 100%;
   min-height: 248px;
   min-width: 100%;
+  border-radius: 25px 0 0;
 }
 #restaurants-list li h1 {
-  color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: .8em;
-  font-weight: 200;
+  color: #a55408;
   letter-spacing: 0;
+  font-weight: 200;
   line-height: 1.3;
-  margin: 20px 0 10px;
+  margin: 15px;
   text-transform: uppercase;
 }
 #restaurants-list p {
-  margin: 0;
-  font-size: .75em;
+  margin: .8em 15px;
+  /* font-size: .75em; */
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #a55408;
   border-bottom: 3px solid #eee;
   color: #fff;
+  font-weight: 600;
+  letter-spacing: 3px;
   display: inline-block;
-  font-size: .75em;
-  margin: 15px 0 0;
+  /* font-size: .75em; */
+  width: calc(100% - 30px);
+  border-radius: 0 0 25px 0;
+  margin: 15px;
   padding: 8px 30px 10px;
   text-align: center;
   text-decoration: none;
